--- a/static/sass/Legals/LegalsContent.sass
+++ b/static/sass/Legals/LegalsContent.sass
@@ -72,6 +72,7 @@
 
 		li
 			padding-bottom: 0.8rem
+			word-break: break-all
 
 
 @media screen and (min-width: $desktop-min-width)
